# AI-Game

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TASKS.md  vcpkg.json  workflow.json5
.github/workflows/: ci.yml
docs/: ERRORS.md  STYLE.md  n8n-workflow.md
include/Blockforge/Core/: Error.h  Log.h
src/: main.cpp
src/Core/: Error.cpp  Log.cpp
tools/: build.ps1  compile_shaders.ps1  run.ps1
tools/n8n/: register-blockforge-workflow.mjs
